syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.f4.proto.dn";
option java_outer_classname = "helloWorldProto";
option objc_class_prefix = "HLW";

package dn;

import "common.proto";

service Slave{
    // 向朋友注册自己
    rpc addNewDataNode (PeerInfo) returns (DataNodeReply) {}

    rpc writeToBlock (WriteRequest) returns (WriteReply) {}
    rpc readBlockByID (ReadBlockRequest) returns (ReadBlockReply) {}
    rpc deleteBlockByID (DeleteBlockRequest) returns (DeleteBlockReply) {}

}

message DeleteBlockRequest{
    repeated DeleteInfo nodesToDelete = 1;
}
message DeleteInfo{
    string ip = 1;
    repeated int64 blockID = 2;
}
message DeleteBlockReply{}

message DataNodeReply{
    int32 status = 1;
    // 0 失败
    // 1 成功
}

message WriteRequest{
    string fileName = 1;
    int64 logicalBlockID = 2;
    bytes block = 3;
    repeated PeerInfo nextNodesIPs = 4;
}
message WriteReply{}

message ReadBlockRequest {
    int64 blockID = 1;
}
message ReadBlockReply {
    bytes block = 1;
}


